--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="usuario">Usuario</string>
     <string name="contraseña">Contraseña</string>
     <string name="repetir_contraseña">Repetir contraseña</string>
+    <string name="correo">Correo</string>
+    <string name="volver">Volver</string>
+    <string name="cerrar_sesion">Cerrar sesión</string>
 </resources>
