Last update,BIG

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="ecomonitor">EcoMonitor</string>
     <string name="a_adir_ecosistema">Añadir ecosistema</string>
     <string name="salir">Salir</string>
-    <string name="estos_son_tus_ecosistemas">Estos son tus ecosistemas</string>
+    <string name="estos_son_tus_ecosistemas">Tus ecosistemas</string>
     <string name="ecosistemas">Ecosistemas:</string>
     <string name="eliminar_ecosistema">Eliminar ecosistema</string>
     <string name="registrar_usuario">Registrar usuario</string>
